# bmpReader

./: .gitignore  =  CMakeLists.txt  README.md  bmp.c  bmp.h  help_message.txt  main.c  main.cpp  main_with_comments.c  main_with_comments_v2.c  parse.c  pixel.c  pixel.h  pixel_with_comments.c  pixel_with_comments.h  rgb.psd  utils.c  utils.h  utils_bmp.c  utils_bmp.h  utils_cptr.c  utils_cptr.h  utils_pix.c  utils_pix.h  utils_pix_with_comments.c  utils_pix_with_comments.h  utils_with_comments.c  utils_with_comments.h  utils_with_comments_v2.c  valgrind-out.txt  valgrind-out_bck.txt  write_bmp.c
.vscode_backup/: settings.json
